// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccrualData should display "-" for headers without targetData 1`] = `
"<div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\">No agreement has been found</h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td id=\\"null-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td id=\\"null-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td id=\\"null-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td id=\\"null-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;

exports[`AccrualData should display correct text for remaining hours without targetData 1`] = `
"<div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\">No agreement has been found</h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td id=\\"null-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td id=\\"null-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td id=\\"null-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td id=\\"null-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;

exports[`AccrualData should display correct title for annual Target Hours 1`] = `
"<div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\"><span id=\\"annualTargetHours-title-span\\">Annual target hours
 <strong>2182</strong> remaining</span></h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th id=\\"annualTargetHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td id=\\"annualTargetHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"annualTargetHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td id=\\"annualTargetHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">10:00</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"annualTargetHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td id=\\"annualTargetHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2182:00</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"annualTargetHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td id=\\"annualTargetHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;

exports[`AccrualData should display correct title for night Hours 1`] = `
"<div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\"><span id=\\"nightHours-title-span\\">Night hours
 <strong>2182</strong> remaining</span></h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th id=\\"nightHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td id=\\"nightHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"nightHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td id=\\"nightHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">10:00</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"nightHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td id=\\"nightHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2182:00</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"nightHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td id=\\"nightHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;

exports[`AccrualData should render a table with correct headers 1`] = `
"<div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\">No accruals found for this day</h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td id=\\"null-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td id=\\"null-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td id=\\"null-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"null-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td id=\\"null-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;
